--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="https://steyker4.github.io/carlosT/">Inicio</a>
+      <a class="nav-link" href="https://steyker4.github.io/tananta11/">Inicio</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#section1">¿quien es Alan key? </a>
@@ -196,7 +196,7 @@
  
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <a title="reciclaje" href="file:///F:/usuarios/alumno/Escritorio/bootstrap/pagina%207%20Reciclaje/hola%207.html"><img src="7.jpg" alt="Reciclaje" style="width:100%;height:60%;"></a>
+        <a title="reciclaje" href="https://steyker4.github.io/tananta7/"><img src="7.jpg" alt="Reciclaje" style="width:100%;height:60%;"></a>
         <div class="carousel-caption">
             <h3 class="text-dark">El Reciclaje</h3>
             <p class="text-dark">la importancia de Reciclar</p>
@@ -210,7 +210,7 @@
           </div>
       </div>
       <div class="carousel-item">
-        <a title="Android" href="file:///F:/usuarios/alumno/Escritorio/bootstrap/pagina%209%20adquisicion%20de%20android/hola%209.html"><img src="9.jpg" alt="android" style="width:100%;height:60%;" /></a>
+        <a title="Android" href="https://steyker4.github.io/tananta9/"><img src="9.jpg" alt="android" style="width:100%;height:60%;" /></a>
         <div class="carousel-caption">
             <h3 class="text-dark">Android</h3>
             <p class="text-dark">El so para celulares</p>
@@ -236,7 +236,7 @@
       <a href="#demos1" class="btn btn-outline-secondary" data-toggle="collapse">ver mas...</a>
       <div id="demos1" class="collapse">
       <br><p><strong>es un proceso donde las materias primas que componen los materiales que usamos en la vida diaria como el papel, vidrio, aluminio, plástico, etc.<br><br><br>
-        <button type="button" class="btn btn-outline-secondary"><a href=file:///F:/usuarios/alumno/Escritorio/bootstrap/pagina%207%20Reciclaje/hola%207.html style="color:rgb(216, 216, 216)";>mas informacion</a>
+        <button type="button" class="btn btn-outline-secondary"><a href=https://steyker4.github.io/tananta7/ style="color:rgb(216, 216, 216)";>mas informacion</a>
         </strong></p></div></div>
 
     <div class="col"><h2>chikunguya</h2>
@@ -250,7 +250,7 @@
       <a href="#demos3" class="btn btn-outline-secondary" data-toggle="collapse">ver mas...</a>
       <div id="demos3" class="collapse">
       <br><p><strong>sistema operativo inicialmente pensado para teléfonos móviles, al igual que iOS, Symbian y Blackberry OS. <br><br><br><br>
-        <button type="button" class="btn btn-outline-secondary"><a href=file:///F:/usuarios/alumno/Escritorio/bootstrap/pagina%209%20adquisicion%20de%20android/hola%209.html style="color:rgb(216, 216, 216)";>mas informacion</a>
+        <button type="button" class="btn btn-outline-secondary"><a href=https://steyker4.github.io/tananta9/ style="color:rgb(216, 216, 216)";>mas informacion</a>
         </strong></p></div>
   </div>
   </div>
